# pyreality

./: LICENSE  README.md  setup.cfg
src/pyreality/: pyreality.py
src/pyreality.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
