[metadata]
name = pyreality
version = 0.0.5
author = Tashfeen Ahmed
author_email = tashfene@gmail.com
description = Create mixed reality visualisations in Jupyter Notebooks
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tashfeenahmed/pyreality
project_urls =
    Bug Tracker = https://github.com/tashfeenahmed/pyreality/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src